// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventInfo should render contact info 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-130ds45-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-h2r9uy-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-10cdcgx-MuiTypography-root"
      >
        entryTime
      </div>
      dateFormat.datespan start, end
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-grow css-1op6f7w-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-10cdcgx-MuiTypography-root"
      >
        event.classPlaces
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-1jxwjqx-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-4t1t75-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1p918l7-MuiTypography-root"
          >
            event.classPlacesHeader.name
          </span>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-4 css-17yh78r-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1p918l7-MuiTypography-root"
          >
            event.classPlacesHeader.dates
          </span>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-a8xmdd-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1p918l7-MuiTypography-root"
          >
            event.classPlacesHeader.entries
          </span>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-a8xmdd-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1p918l7-MuiTypography-root"
          >
            event.classPlacesHeader.places
          </span>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-a8xmdd-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1p918l7-MuiTypography-root"
          >
            event.classPlacesHeader.members
          </span>
        </div>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-auto css-19db06o-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-933b1h-MuiGrid2-root"
        >
          ALO
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-4 css-1yb0kk6-MuiGrid2-root"
        >
          eeeeee d.M.
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-zu9nup-MuiGrid2-root"
        >
          22
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-zu9nup-MuiGrid2-root"
        >
          11
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-zu9nup-MuiGrid2-root"
        >
          2
        </div>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-qoww7d-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-10cdcgx-MuiTypography-root"
      >
        event.judges
      </div>
      <div
        class="MuiBox-root css-0"
      >
        Tuomari 1
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1kf9w7-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-10cdcgx-MuiTypography-root"
      >
        event.official
      </div>
      official name, 0700-official, official@example.com
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1y4ax6f-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-10cdcgx-MuiTypography-root"
      >
        event.secretary
      </div>
      secretary name, 0700-secretary, secretary@example.com
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-16j6p89-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-10cdcgx-MuiTypography-root"
      >
        paymentDetails
      </div>
      123 €, event.costMember 123 €
      . 
      <span
        style="white-space: nowrap;"
      >
        paymentTimeOptions.registration
      </span>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-viul5o-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-10cdcgx-MuiTypography-root"
      >
        event.priority
      </div>
      <div
        class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ixr9fl-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
        >
          priority.members
        </span>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1og23c2-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-10cdcgx-MuiTypography-root"
      >
        event.description
      </div>
      event description text
    </div>
  </div>
</div>
`;

exports[`EventInfo should render event information 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-130ds45-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-h2r9uy-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-10cdcgx-MuiTypography-root"
      >
        entryTime
      </div>
      dateFormat.datespan start, end
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-grow css-1op6f7w-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-10cdcgx-MuiTypography-root"
      >
        event.classPlaces
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-1jxwjqx-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-4t1t75-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1p918l7-MuiTypography-root"
          >
            event.classPlacesHeader.name
          </span>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-4 css-17yh78r-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1p918l7-MuiTypography-root"
          >
            event.classPlacesHeader.dates
          </span>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-a8xmdd-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1p918l7-MuiTypography-root"
          >
            event.classPlacesHeader.entries
          </span>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-a8xmdd-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1p918l7-MuiTypography-root"
          >
            event.classPlacesHeader.places
          </span>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-a8xmdd-MuiGrid2-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1p918l7-MuiTypography-root"
          >
            event.classPlacesHeader.members
          </span>
        </div>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-auto css-19db06o-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-933b1h-MuiGrid2-root"
        >
          ALO
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-4 css-1yb0kk6-MuiGrid2-root"
        >
          eeeeee d.M.
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-zu9nup-MuiGrid2-root"
        >
          22
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-zu9nup-MuiGrid2-root"
        >
          11
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-zu9nup-MuiGrid2-root"
        >
          2
        </div>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-qoww7d-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-10cdcgx-MuiTypography-root"
      >
        event.judges
      </div>
      <div
        class="MuiBox-root css-0"
      >
        Tuomari 1
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1kf9w7-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-10cdcgx-MuiTypography-root"
      >
        event.official
      </div>
      Teemu Toimitsija, 040-official, official@example.com
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1y4ax6f-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-10cdcgx-MuiTypography-root"
      >
        event.secretary
      </div>
      Siiri Sihteeri, 040-secretary, secretary@example.com
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-16j6p89-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-10cdcgx-MuiTypography-root"
      >
        paymentDetails
      </div>
      123 €, event.costMember 123 €
      . 
      <span
        style="white-space: nowrap;"
      >
        paymentTimeOptions.registration
      </span>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-viul5o-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-10cdcgx-MuiTypography-root"
      >
        event.priority
      </div>
      <div
        class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ixr9fl-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
        >
          priority.members
        </span>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-1og23c2-MuiGrid2-root"
    >
      <div
        class="MuiTypography-root MuiTypography-caption css-10cdcgx-MuiTypography-root"
      >
        event.description
      </div>
      event description text
    </div>
  </div>
</div>
`;
